# VLM-Driver

./: .gitignore  README.md  README.me  model.py
api/: ollama_test.py
firmware/vesc/: vesc_setup.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/baseline_cv/lib/baseline_cv/: baseline_node  fake_camera_pub
install/baseline_cv/share/baseline_cv/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
mechanical/assembly/: 01_component_prep.md  02_mounting_deck_prep.md  03_final_assembly.md
software/autonomy_ws/src/vlm_driver/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
software/autonomy_ws/src/vlm_driver/config/: models.yaml  vlm_driver.yaml
software/autonomy_ws/src/vlm_driver/launch/: download.launch.py  vlm_driver.launch.py
software/autonomy_ws/src/vlm_driver/vlm_driver/: download_models.py  inference_engine.py  model_registry.py  vlm_driver_node.py
software/initial_random_test/: api.py  ollama_query_vlm.sh
software/setup/: hokuyo_10lx_setup.md  nomachine_setup.md  realsense_camera_setup.md  ros2_install.md  tips_and_tricks.md  udev_rules_setup.md
src/: README.md
src/baseline_cv/: package.xml
src/baseline_cv/baseline_cv/: baseline_node.py  fake_camera_pub.py  video_to_image.py
src/command_mapper/command_mapper/: mapper_node.py
src/model_oa/: package.xml  query_vlm.sh  setup.cfg  setup.py
src/model_oa/model_oa/: model_oa_client_node.py
src/vesc_bridge/: setup.cfg  setup.py
src/vesc_bridge/vesc_bridge/: vesc_bridge_node.py
(+94 files in other folders)
